--- a/20250605-forets-tropicales-premiere-svt/20250605-forets-tropicales-premiere-svt.tex
+++ b/20250605-forets-tropicales-premiere-svt/20250605-forets-tropicales-premiere-svt.tex
@@ -1,4 +1,4 @@
-% Created 2025-06-05 Thu 17:48
+% Created 2025-06-05 Thu 17:54
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt,table,dvipsnames,compress]{beamer}
 \usepackage[utf8]{inputenc}
@@ -157,12 +157,12 @@ urlcolor=Maroon}
 % \end{frame}
 % \placelogofalse
 \section{Les forêts tropicales}
-\label{sec:orgf3edf9f}
+\label{sec:orgb955b1e}
 
 \subsection{Qu'est-ce qu'une forêt tropicale ?}
-\label{sec:org8cad0f5}
+\label{sec:orgcadce0c}
 
-\begin{frame}[label={sec:org1714ca6}]{Qu'est-ce qu'une forêt ?}
+\begin{frame}[label={sec:org6c367b3}]{Qu'est-ce qu'une forêt ?}
 \begin{center}
 \includegraphics[width=\textwidth]{figs/vue-drone-foret-tropicale-2.jpg}
 \end{center}
@@ -171,7 +171,7 @@ urlcolor=Maroon}
 \item Forêt: ensemble d'arbres de plus de 5 m de haut et de 0.5 ha (définition de la FAO).
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orga41392f}]{Qu'est-ce qu'une forêt tropicale ?}
+\begin{frame}[label={sec:org91eda36}]{Qu'est-ce qu'une forêt tropicale ?}
 \begin{center}
 \includegraphics[width=\textwidth]{figs/carte-des-forets-tropicales.jpg}
 \end{center}
@@ -180,7 +180,7 @@ urlcolor=Maroon}
 \item Forêt tropicale: qui se trouve entre les tropiques. \textpm{}23\textsuperscript{\textdegree{}} au nord ou au sud de l'équateur.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orge02dbd1}]{Qu'est-ce qu'une forêt tropicale ?}
+\begin{frame}[label={sec:org4324910}]{Qu'est-ce qu'une forêt tropicale ?}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{center}
@@ -200,16 +200,16 @@ Les forêts couvrent 1/3 de la surface des terres émergées.
 \end{columns}
 \end{frame}
 \subsection{Un réservoir de biodiversité}
-\label{sec:org7e6bb5b}
+\label{sec:orgb3057ba}
 
-\begin{frame}[label={sec:orgf9dbc82}]{Un réservoir de biodiversité}
+\begin{frame}[label={sec:orga6b6524}]{Un réservoir de biodiversité}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{figs/vue-drone-foret-tropicale.jpg}
 \end{center}
 
 Plus de 100 espèces d'arbres à l'hectare en forêt tropicale.
 \end{frame}
-\begin{frame}[label={sec:org7f62daa}]{Un réservoir de biodiversité}
+\begin{frame}[label={sec:org8633800}]{Un réservoir de biodiversité}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -224,21 +224,21 @@ Plus de 100 espèces d'arbres à l'hectare en forêt tropicale.
 \end{columns}
 Un habitat en trois dimensions abritant une multitude d'espèces animales et végétales.
 \end{frame}
-\begin{frame}[label={sec:org9de8858}]{Un réservoir de biodiversité}
+\begin{frame}[label={sec:org8f8c544}]{Un réservoir de biodiversité}
 \begin{center}
 \includegraphics[width=0.7\textwidth]{figs/planete-svt.png}
 \end{center}
 
 Le radeau des cimes inventé par Francis Hallé, chercheur et botaniste à l'Université de Montpellier.
 \end{frame}
-\begin{frame}[label={sec:orgdb1bc31}]{Un réservoir de biodiversité}
+\begin{frame}[label={sec:org5f715ad}]{Un réservoir de biodiversité}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{figs/biodiversity-in-tropical-forests-2.jpg}
 \end{center}
 
 Les forêts tropicales ne représentent que 15\% des terres émergées mais elles abritent >50\% des espèces vivant sur ces terres.
 \end{frame}
-\begin{frame}[label={sec:org60b4b1c}]{Importance de la biodiversité}
+\begin{frame}[label={sec:orga92a8c0}]{Importance de la biodiversité}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{figs/biodiversity-network.jpg}
 \end{center}
@@ -251,12 +251,12 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \section{Les services rendus par les forêts tropicales}
-\label{sec:org60e1a0b}
+\label{sec:org02191cf}
 
 \subsection{Le stockage du carbone}
-\label{sec:org681c1f8}
+\label{sec:org846051b}
 
-\begin{frame}[label={sec:org32c4e70}]{Le stockage de carbone (ou CO2)}
+\begin{frame}[label={sec:org3a077c1}]{Le stockage de carbone (ou CO2)}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figs/carbon-sequestration-by-forests.png}
 \end{center}
@@ -268,9 +268,9 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \subsection{Les forêts et le cycle de l'eau}
-\label{sec:org35ba3a5}
+\label{sec:org7b66954}
 
-\begin{frame}[label={sec:orgbf312dd}]{Les forêts et le cycle de l'eau}
+\begin{frame}[label={sec:org66bc345}]{Les forêts et le cycle de l'eau}
 \begin{center}
 \includegraphics[width=0.7\textwidth]{figs/evapotranspiration-amazonie.png}
 \end{center}
@@ -281,9 +281,9 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \subsection{Les ressources forestières}
-\label{sec:org1771b0c}
+\label{sec:org0097c36}
 
-\begin{frame}[label={sec:orgb7ab646}]{Les ressources forestières}
+\begin{frame}[label={sec:orga346c2b}]{Les ressources forestières}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -304,12 +304,12 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \section{L'homme destructeur ou protecteur des forêts}
-\label{sec:org8277e15}
+\label{sec:org46d7217}
 
 \subsection{La déforestation}
-\label{sec:org3902729}
+\label{sec:orgb42c0fa}
 
-\begin{frame}[label={sec:orgd5370d3}]{La déforestation}
+\begin{frame}[label={sec:orga2e073e}]{La déforestation}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figs/tarzan.jpg}
 \end{center}
@@ -319,7 +319,7 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \item En conséquence: perte de biodiversité, émissions de CO2, érosion des sols et désertification.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org68f836b}]{Les causes de la déforestation}
+\begin{frame}[label={sec:org8045215}]{Les causes de la déforestation}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.6\textwidth]{figs/plantations-huile-de-palme.jpg}
@@ -333,9 +333,9 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \subsection{Le changement climatique}
-\label{sec:orgd1c188b}
+\label{sec:org5b5b416}
 
-\begin{frame}[label={sec:org6712401}]{Le changement climatique}
+\begin{frame}[label={sec:org8071374}]{Le changement climatique}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figs/sabah_1899-forest-dieback.jpg}
 \end{center}
@@ -347,9 +347,9 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \subsection{La conservation des forêts}
-\label{sec:org583c937}
+\label{sec:org166304c}
 
-\begin{frame}[label={sec:org550e67e}]{Les aires naturelles protégées}
+\begin{frame}[label={sec:orgef8475d}]{Les aires naturelles protégées}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{figs/carte-aires-protegees.jpg}
 \end{center}
@@ -361,7 +361,7 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \item Actuellement: 8\% pour les mers et 16.8\% des terres.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org45985b2}]{La liste rouge des espèces et des écosystèmes}
+\begin{frame}[label={sec:org7bb747e}]{La liste rouge des espèces et des écosystèmes}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -381,7 +381,7 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \item Informe et influe sur les politiques nationales et internationales de conservation.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org3dbc46c}]{La lutte contre la déforestation importée}
+\begin{frame}[label={sec:orgde9b0c3}]{La lutte contre la déforestation importée}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figs/eudr-europe.jpg}
 \end{center}
@@ -392,7 +392,7 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \item Les produit issus de la déforestation (cd. huile de palme, viande, soja, café, cacao, bois, caoutchouc) ne pourront plus être importés en Europe.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org42073c0}]{Que peut-on faire à notre échelle ?}
+\begin{frame}[label={sec:org05f8e72}]{Que peut-on faire à notre échelle ?}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}
@@ -411,12 +411,12 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{columns}
 \end{frame}
 \section{Le métier de chercheur en écologie}
-\label{sec:orgf0f9660}
+\label{sec:org4ca88d1}
 
 \subsection{Le terrain}
-\label{sec:org80f10be}
+\label{sec:org08cf7f9}
 
-\begin{frame}[label={sec:orgaa0cfc6}]{Le terrain}
+\begin{frame}[label={sec:org58aed0d}]{Le terrain}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figs/terrain-collage.png}
 \end{center}
@@ -429,9 +429,9 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \subsection{L'analyse de données}
-\label{sec:org3d63e1b}
+\label{sec:org0d4efcf}
 
-\begin{frame}[label={sec:orgd61a48d}]{L'analyse de données}
+\begin{frame}[label={sec:org0f1e278}]{L'analyse de données}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.7\textwidth]{figs/drone-analyse-de-donnees.png}
@@ -445,9 +445,9 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \subsection{Le transfert de connaissances}
-\label{sec:org81fa170}
+\label{sec:org410d966}
 
-\begin{frame}[label={sec:org8fd3fe3}]{Le transfert de connaissances}
+\begin{frame}[label={sec:org7937585}]{Le transfert de connaissances}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figs/ecriture-article-scientifique.png}
 \end{center}
@@ -461,9 +461,9 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \end{itemize}
 \end{frame}
 \subsection{Devenir chercheur}
-\label{sec:org2e3d176}
+\label{sec:org3ed86cc}
 
-\begin{frame}[label={sec:orge597651}]{Devenir chercheur}
+\begin{frame}[label={sec:org91d71c4}]{Devenir chercheur}
 \begin{itemize}
 \item A l'école: français (rédaction), math (statistiques), physique (cycle de l'eau et du carbone), biologie (photosynthèse), géographie (cartes), langues étrangères (contexte international), sport (terrain). Toutes ces disciplines sont mobilisées dans le travail de chercheur.
 \item Parcours LMD: Plusieurs options pour LM: parcours universitaire ou prépa et école d'ingénieur. Doctorat dans un labo de recherche avec inscription à l'université.
@@ -472,7 +472,7 @@ Les forêts tropicales ne représentent que 15\% des terres émergées mais elle
 \item Accessible à tous si on s'en donne les moyens, métier passionnant.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org2141776}]{En savoir plus}
+\begin{frame}[label={sec:orgc9880ad}]{En savoir plus}
 En savoir plus sur mon métier de chercheur en écologie forestière:
 
 \begin{itemize}
